--- a/Homepage.html
+++ b/Homepage.html
@@ -28,7 +28,7 @@
         </div>
      <div>
         <div class="container">
-        <ul>
+        <ul yes this is what is happening>
             <li><a href="Homepage.html">Home</a></li>
             <li><a href="Itinerary.html">Plan a Trip</a></li>
             <li><a href="Media.html">Media</a></li>
