--- a/public/Homepage.html
+++ b/public/Homepage.html
@@ -39,7 +39,7 @@
                 <!-- ----------------      Login    ----------------  -->
                 <div class="form-box login">
                     <h2>Login</h2>
-                    <form action="" method="post">
+                    <form action="/auth/login" method="post">
                         <div class="input-box">
                             <span class="icon"><ion-icon name="mail"></ion-icon></span>
                             <input type="email" id="email" name="email" required>
@@ -65,7 +65,7 @@
         <!-- ----------------      Register    ----------------  -->
                 <div class="form-box register">
                     <h2>Registration</h2>
-                    <form action="" method="post" novalidate>
+                    <form action="/auth/signup" method="post" novalidate>
                         <div class="input-box">
                             <span class="icon"><ion-icon name="person"></ion-icon></span>
                             <input type="username" id="username" name="username" required>
